##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = nrl
version = 0.0.1-dev
url = https://github.com.cthoyt/nrl
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
license = MIT
description = Network representation learning in Python
long_description = file: README.rst
keywords =
    Network representation learning

[options]
install_requires =
    dataclasses; python_version < "3.7"
    python-igraph
    gensim
    numpy
    scipy
    sklearn
    pandas
    click
    # easy_config
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
    = src
zip_safe = False

[options.extras_require]
docs =
    sphinx
    sphinx-click
    sphinx-rtd-theme
tests =
    node2vec
    networkx

[options.entry_points]
console_scripts =

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag =
    py36
    py37
