##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = nrl
version = 0.0.2-dev
url = https://github.com.cthoyt/nrl
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
license = MIT
description = Network representation learning in Python
long_description = file: README.rst
keywords =
    Network representation learning

[options]
install_requires =
    dataclasses; python_version < "3.7"
    python-igraph
    gensim
    numpy
    scipy
    sklearn
    pandas
    click
    # easy_config
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
    = src
zip_safe = False

[options.extras_require]
docs =
    sphinx
    sphinx-click
    sphinx-rtd-theme
    sphinx-autodoc-typehints
tests =
    node2vec
    networkx

[options.entry_points]
console_scripts =

[options.packages.find]
where = src

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = nrl
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/nrl
    .tox/*/lib/python*/site-packages/nrl

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
